[metadata]
name = FastMQTT
version = 0.0.1
description = "Pandantic MQTT"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomaskoller/FastMQTT
author = Thomas Koller
author_email = "Thomas Koller" <tk.media@icloud.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*